# my_course_agent

./: .env  .gitignore  =0.2.6  README.md  build_index.py  error_langgraph.txt  langgraph.json  latest  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Clases/: 01_Notas.md  01_notas.md  02_notas.md  03_notas.md  04_notas.md  05_notas.md  06_notas.md  07_notas.md  08_notas_RAG_OpenAI_FileSearch.md
nootbooks/: 01_noootbook.ipynb  02_simple.ipynb  03_messages.ipynb  04__oss_integracion_langchain_ollama.ipynb.ipynb
notebooks/: 04_integracion_open_source_langchain_ollama.ipynb  05_rag.ipynb  06-chaining.ipynb  06_prompt_chaining_langgraph.ipynb  07_structured_output_langgraph.ipynb  10_implementacion_tools_langchain_ollama.ipynb  11_enrutamiento_condicional_basico_langgraph.ipynb  prompting_techniques_langchain.ipynb
notes/: 01_introduccion_langgraph_agentes_ia.md  02_configuracion_entorno_primer_agente.md  03_configuracion_uv_escalar_agentes.md  03_notas.md  04_estado_compartido_langgraph.md  04_notas.md  05_gestion_historial_mensajes.md  06_integracion_openai_anthropic_langchain.md  07_integracion_llm_grafos_agentes_razonadores.md  08_rag_openai_file_search.md  09.md  09_prompt_chaining_orquestacion_agentes.md  10_respuestas_estructuradas_llms_agentes.md  11_organizacion_codigo_langgraph.md  12_prompts_dinamicos_langchain_templates_condicionales.md  13_patron_react_agentes_langgraph.md  14_implementacion_tools_react_agentes_langchain_core.md  15_integracion_tools_llm_respuestas_estructuradas.md  16_implementacion_agente_react_booking_citas_medicas.md  17_enrutamiento_agentes_conditional_edge_langgraph.md  18_routing_inteligente_llm_langgraph.md  19_paralelizacion_nodos_langgraph.md  20_desarrollo_agente_code_review_paralelo_langgraph.md  (+7 more)
src/agents/: rag.py  (+4 more)
(+14 files in other folders)
