[project]
name = "my-course-agent"
version = "0.1.0"
description = "Agente modular con LangGraph, Ollama y arquitectura profesional (src/agents, api, notebooks)"
readme = "README.md"
requires-python = ">=3.13"

# Dependencias principales (producci칩n)
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3.22",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3.35",
    "langgraph>=0.2",
    "langgraph-api>=0.4.35",
    "pydantic<3",
    "python-dotenv>=1.0",
]

# Dependencias de desarrollo
[dependency-groups]
dev = [
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langgraph-cli[inmem]>=0.4.2",
]

# Permite que Python reconozca paquetes dentro de src/
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# Indica a uv d칩nde est치 el c칩digo fuente
[tool.uv.sources]
my-course-agent = { path = "src" }

